# mlops

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  dvc.yaml  index.html  mkdocs.yml  objects.inv  params.yaml  pyproject.toml  requirements.txt  sweep.yaml
.dvc/: config
.github/workflows/: docs.yml
data/processed/: wine_cleaned.csv.dvc
docs/: index.md  quickstart.md
docs/experiments/: comparison.md  experiment_20251221_212011.md  experiment_20251221_212702.md  experiment_20251221_212907.md  experiment_20251221_214230.md  latest.md
docs/guides/: experiments.md  installation.md  training.md
experiments/comparison/: index.html
experiments/experiment_20251221_212011/: index.html
experiments/experiment_20251221_212702/: index.html
experiments/experiment_20251221_212907/: index.html
experiments/experiment_20251221_214230/: index.html
experiments/latest/: index.html
guides/experiments/: index.html
guides/installation/: index.html
guides/training/: index.html
models/: .gitignore  model_v1.joblib.dvc  model_v1_metadata.json.dvc
quickstart/: index.html
reports/: compare_experiments.py  generate_report.py
search/: search_index.json
src/: clearml_pipeline.py  dataset_processing.py  schedule_pipeline.py  train.py
src/config/: schemas.py
src/modeling/: predict.py  train.py
src/utils/: wandb.py
wandb/: latest-run
wandb/run-20251215_022016-n6nwvslz/: run-n6nwvslz.wandb
wandb/run-20251215_022144-216f8c19/: run-216f8c19.wandb
(+452 files in other folders)
