[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.0.1"
description = "project to asses wine quality"
authors = [
  { name = "Lev Livshits" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["src"]
force_sort_within_sections = true


[tool.poetry.group.dev.dependencies]
black = "^25.11.0"
isort = "^7.0.0"
ruff = "^0.14.5"
mypy = "^1.18.2"
bandit = "^1.8.6"
pytest = "^9.0.1"
pre-commit = "^4.4.0"


[tool.poetry.dependencies]
black = "^25.11.0"
isort = "^7.0.0"
ruff = "^0.14.5"
mypy = "^1.18.2"
bandit = "^1.8.6"
pytest = "^9.0.1"
pre-commit = "^4.4.0"
pandas = "^2.3.3"
numpy = "^2.3.5"
scikit-learn = "^1.7.2"
matplotlib = "^3.10.7"
seaborn = "^0.13.2"
jupyter = "^1.1.1"
mlflow = "^3.6.0"
dvc = "^3.64.2"
